@@ -4,6 +4,7 @@ Revision history for Schedule::Activity
 	- Annotation attributes during merge
 	- Support attribute reporting from general activity lists
 	- Script --save with --notemerge now matches doc
+	- Script --attribute=grid
 
 0.2.1 - 2025-11-16
 	- Incremental schedule construction
